--- a/views/overview.pug
+++ b/views/overview.pug
@@ -1,17 +1,7 @@
-doctype html
-html(lang='en-US')
-  head
-    meta(charset='UTF-8')
-    title Digital Talent coupons
-    meta(name='Description', content='Assessment Task')
-    meta(content='True', name='HandheldFriendly')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0, user-scalable=yes')
-    link(rel='stylesheet', href='./css/style.css')
-    link(rel='stylesheet', href='./css/style2.css')
-  body.home.rebrand.locale-us
-    #layout
-      include _header
-      #main(role='main')
+extends base
+
+block content
+  #main(role='main')
         section.hero(style='background-color: #fff7f3')
           .container
             .row
