Login function enabled

--- a/views/_header.pug
+++ b/views/_header.pug
@@ -27,7 +27,7 @@ header#header
                 #header-account
                   if user
                     ul.nav-list.inline-list.visible-lg-block
-                      li.tab.action.logout
+                      li#logout.tab.action.logout
                         a(href='/logout')
                           span.tab-txt Logout
                       li.tab.action
