--- a/views/base.pug
+++ b/views/base.pug
@@ -17,4 +17,5 @@ html(lang='en-US')
             block content
 
 
-        script(type='module',src='/js/index.js')
+        script(src='/js/axios.js')
+        script(src="https://unpkg.com/axios/dist/axios.min.js")
