--- a/views/login.pug
+++ b/views/login.pug
@@ -7,10 +7,10 @@ block content
         input(type='hidden')
         .form-content
           fieldset.form-group
-            input#j_username.rnd.login-field.w-100(type='text', placeholder='Email Address or Username', aria-label='Email Address or Username')
+            input#j_username.rnd.login-field.w-100(type='email', placeholder='Email Address', aria-label='Email Address')
           fieldset.form-group
-            input#j_password.rnd.pwd-field.w-100(type='password', placeholder='Password', maxlength='101', aria-label='Password')
-          input.btn.btn-submit.blue.btn-md(type='submit')
+            input#j_password.rnd.pwd-field.w-100(type='password',placeholder='Password', maxlength='101', aria-label='Password')
+          input.btn.btn-submit.blue.btn-md(type='submit' value='login')
       .flexbox-md.space-between.m-t-1.f-14.txt-center
         p
           a(href='/signup') Don&apos;t Have an Account?
